--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -6,6 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hello world Mini Vue3</title>
+  <style>
+    .red {
+      color: red;
+    }
+
+    .blue {
+      color: blue;
+    }
+
+    .hard {
+      font-weight: bold;
+    }
+  </style>
 </head>
 
 <body>
